--- a/GameOfLifeMaui/GameOfLifeMaui.csproj
+++ b/GameOfLifeMaui/GameOfLifeMaui.csproj
@@ -58,15 +58,11 @@
     <ItemGroup>
       <PackageReference Include="CommunityToolkit.Maui" Version="3.1.0" />
       <PackageReference Include="nor0x.Maui.ColorPicker" Version="1.0.1" />
+      <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+      <PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.1.4" />
     </ItemGroup>
 
     <ItemGroup>
-      <MauiXaml Update="SettingsPage.xaml">
-        <SubType>Designer</SubType>
-      </MauiXaml>
-      <MauiXaml Update="ColorHolder.xaml">
-        <SubType>Designer</SubType>
-      </MauiXaml>
       <MauiXaml Update="Popups\ColorPopup.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
@@ -79,17 +75,24 @@
       <MauiXaml Update="Popups\CellAgePopup.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
+      <MauiXaml Update="Pages\MainPage.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
+      <MauiXaml Update="Pages\SettingsPage.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
+      <MauiXaml Update="ViewModels\ColorHolder.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
+      <MauiXaml Update="ViewModels\App.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
+      <MauiXaml Update="ViewModels\AppShell.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="SettingsPage.xaml.cs">
-        <DependentUpon>SettingsPage.xaml</DependentUpon>
-        <SubType>Code</SubType>
-      </Compile>
-      <Compile Update="ColorHolder.xaml.cs">
-        <DependentUpon>ColorHolder.xaml</DependentUpon>
-        <SubType>Code</SubType>
-      </Compile>
       <Compile Update="Popups\ColorPopup.xaml.cs">
         <DependentUpon>ColorPopup.xaml</DependentUpon>
         <SubType>Code</SubType>
@@ -106,10 +109,39 @@
         <DependentUpon>CellAgePopup.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="Pages\MainPage.xaml.cs">
+        <DependentUpon>MainPage.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+      <Compile Update="Pages\SettingsPage.xaml.cs">
+        <DependentUpon>SettingsPage.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+      <Compile Update="ViewModels\ColorHolder.xaml.cs">
+        <DependentUpon>ColorHolder.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+      <Compile Update="ViewModels\App.xaml.cs">
+        <DependentUpon>App.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
+      <Compile Update="ViewModels\AppShell.xaml.cs">
+        <DependentUpon>AppShell.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Images" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <AdditionalFiles Include="ViewModels\Pages\MainPage.xaml" />
+      <AdditionalFiles Include="ViewModels\Pages\SettingsPage.xaml" />
+      <AdditionalFiles Include="ViewModels\Popups\CellAgePopup.xaml" />
+      <AdditionalFiles Include="ViewModels\Popups\CellSizePopup.xaml" />
+      <AdditionalFiles Include="ViewModels\Popups\ColorPopup.xaml" />
+      <AdditionalFiles Include="ViewModels\Popups\RulestringPopup.xaml" />
     </ItemGroup>
 
 </Project>
